--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,14 +2,35 @@
 title: Le Wagon - Middleman
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h1>Le Wagon Berlin</h1>
+    <p>Learn to code with us in Berlin</p>
+    <a class="btn btn-primary btn-lg">Start now</a>
+  </div>
+</div>
+
+
+
+
+<div class=“container”>
+  <div class=“row”>
+    <% %w(paris berlin lisbon shangai).each do |city| %>
+      <div class="col-xs-12 col-sm-3">
+        <div class="card" style="background-image: url('https://kitt.lewagon.com/placeholder/cities/<%= city %>');">
+          <div class=“card-category”><%=city.capitalize%></div>
+          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+          <div class="card-description">
+            <h2>Le Wagon Shanghai</h2>
+            <p>Very cool city, the best</p>
+          </div>
+          <i class="fa fa-star" style="color: #ffb400"></i>
+          <i class="fa fa-star" style="color: #ffb400"></i>
+          <i class="fa fa-star" style="color: #ffb400"></i>
+          <i class="fa fa-star" style="color: #cacccd"></i>
+          <i class="fa fa-star" style="color: #cacccd"></i>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
